samples/_failures_safe/1761512425_c55771_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_74ba3cd5.c: In function ‘main’:
./samples/SAFE/__tmp_74ba3cd5.c:162:5: error: expected expression at end of input
  162 |     for (size_t i = 0; i < compressed.size && i <
      |     ^~~
./samples/SAFE/__tmp_74ba3cd5.c:162:5: error: expected declaration or statement at end of input
